Porządki wewnątrz viewmodels

--- a/LanguageSchool/Views/Account/Login.cshtml
+++ b/LanguageSchool/Views/Account/Login.cshtml
@@ -1,5 +1,4 @@
-﻿@using LanguageSchool.Models
-@model LoginViewModel
+﻿@model LanguageSchool.Models.ViewModels.LoginViewModel
 
 <body background="~/images/Background_contact_faded.jpg">
     <div class="row">
