--- a/LanguageSchool/Views/Group/Details.cshtml
+++ b/LanguageSchool/Views/Group/Details.cshtml
@@ -1,5 +1,5 @@
 ﻿@using System.Linq;
-@model LanguageSchool.Models.ViewModels.GroupViewModels.TeacherGroupVM
+@model LanguageSchool.Models.ViewModels.GroupViewModels.TeacherGroupDetailsVM
 
 @{
     ViewBag.Title = "Index";
