--- a/LanguageSchool/Views/Group/FullDetails.cshtml
+++ b/LanguageSchool/Views/Group/FullDetails.cshtml
@@ -1,6 +1,6 @@
 ﻿@using LanguageSchool.Models.ViewModels
 
-@model LanguageSchool.Models.ViewModels.GroupViewModel
+@model LanguageSchool.Models.ViewModels.GroupViewModels.SecretaryGroupDetailsVM
 
 @{
     ViewBag.Title = "Details";
