Dodanie walidacji dla dat (nie mniejsza niż)

--- a/LanguageSchool/Views/Course/Create.cshtml
+++ b/LanguageSchool/Views/Course/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model LanguageSchool.Models.ViewModels.CourseViewModel
+﻿@model LanguageSchool.Models.ViewModels.CourseViewModels.CourseInputVM
 
 @{
     ViewBag.Title = "Edit";
