--- a/LanguageSchool/Views/Course/FullDetails.cshtml
+++ b/LanguageSchool/Views/Course/FullDetails.cshtml
@@ -99,7 +99,7 @@
                 <button class="btn btn-block btn-danger" type="button" data-toggle="modal" data-target="#deleteDialog">Usuń</button>
             </div>
             <div class="col-md-3">
-                <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Create", "Group", new { id = Model.CourseId }))'">Dodaj grupę</button>
+                <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Create", "Group", new { id = Model.CourseId })'">Dodaj grupę</button>
             </div>
         </div>
     </div>
