--- a/LanguageSchool/Views/Group/FullDetails.cshtml
+++ b/LanguageSchool/Views/Group/FullDetails.cshtml
@@ -28,7 +28,7 @@
                     </label>
                 </div>
                 <div class="col-md-3">
-                    @Html.DisplayFor(model => model.Teacher.Fullname)
+                    @Html.DisplayFor(model => model.Teacher.FullName)
                 </div>
             </div>
             <div class="row">
