--- a/LanguageSchool/Views/UserData/List.cshtml
+++ b/LanguageSchool/Views/UserData/List.cshtml
@@ -231,8 +231,10 @@
                         <td>
                             @if (item.Comment != null)
                             {
-                                <label data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-comment"></span></label>
-                                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                                var modalId = "comment" + item.IsContactRequest + "_" + item.Id;
+
+                                <label data-toggle="modal" data-target="#@modalId"><span class="glyphicon glyphicon-comment"></span></label>
+                                <div class="modal fade" id="@modalId" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                                     <div class="modal-dialog modal-sm" role="document">
                                         <div class="modal-content">
                                             <div class="modal-header">
