--- a/LanguageSchool/Views/Course/List.cshtml
+++ b/LanguageSchool/Views/Course/List.cshtml
@@ -8,6 +8,16 @@
 <div class="container-fluid">
     @using (Html.BeginForm())
     {
+        var toFirst = Url.Action("List", new
+                {
+                    sortColumn = ViewBag.sortColumn,
+                    sortDirection = ViewBag.sortDirection,
+                    searchString = ViewBag.searchString,
+                    showActivated = ViewBag.showActivated,
+                    showDeactivated = ViewBag.showDeactivated,
+                    page = 1
+                });
+
         <div class="row">
             <div class="bordered col-md-12">
                 <div class="col-md-3">
@@ -20,13 +30,13 @@
                 <div class="col-md-9">
                     @Html.Label("Szukana w tabeli fraza:")
                     @Html.TextBox("searchString", (string)ViewBag.searchString, new
-                      {
-                          @id = "searchString",
-                          @class = "widetextarea",
-                          @style = "width:620px",
-                          placeholder = "Szukaj w polach Nazwa kursu, Opis, Poziom i Liczba godzin"
-                      }
-                   )
+               {
+                   @id = "searchString",
+                   @class = "widetextarea",
+                   @style = "width:620px",
+                   placeholder = "Szukaj w polach Nazwa kursu, Opis, Poziom i Liczba godzin"
+               }
+    )
                 </div>
             </div>
 
@@ -35,22 +45,22 @@
             <div class="row col-md-12">
                 <div class="col-md-10">
                     @Html.PagedListPager(Model, page => Url.Action("List",
-                new
-                {
-                    sortColumn = ViewBag.sortColumn,
-                    sortDirection = ViewBag.sortDirection,
-                    searchString = ViewBag.searchString,
-                    showActivated = ViewBag.showActivated,
-                    showDeactivated = ViewBag.showDeactivated,
-                    page
-                }
-            ))
+         new
+         {
+             sortColumn = ViewBag.sortColumn,
+             sortDirection = ViewBag.sortDirection,
+             searchString = ViewBag.searchString,
+             showActivated = ViewBag.showActivated,
+             showDeactivated = ViewBag.showDeactivated,
+             page
+         }
+))
                 </div>
                 <div class="col-md-1">
-                    <button class="btn btn-default" onclick="ResetForms()">Wyczyść</button>
+                    <button formaction= @toFirst formmethod = "post" class="btn btn-default" onclick="ResetForms()">Wyczyść</button>
                 </div>
                 <div class="col-md-1" style="float:right">
-                    <button class="btn btn-default" id="submit" type="submit">Szukaj</button>
+                    <button class="btn btn-default" formaction= @toFirst formmethod = "post">Szukaj</button>
                 </div>
             </div>
         </div>
