--- a/LanguageSchool/Views/UserData/List.cshtml
+++ b/LanguageSchool/Views/UserData/List.cshtml
@@ -170,7 +170,7 @@
          ))
         </div>
         <div class="col-md-1">
-            <button class="btn btn-default" formaction=@toFirst formmethod="post" class="btn btn-default" onclick="ResetForms()">Wyczyść</button>
+            <button class="btn btn-default" formaction=@toFirst formmethod="post" onclick="ResetForms()">Wyczyść</button>
         </div>
         <div class="col-md-1">
             <button class="btn btn-default" id="submit" formaction=@toFirst formmethod="post">Szukaj</button>
