--- a/LanguageSchool/Views/UserData/List.cshtml
+++ b/LanguageSchool/Views/UserData/List.cshtml
@@ -111,22 +111,22 @@
                     </div>
                     <div class="col-md-3">
                         @Html.TextBox("street", (string)ViewBag.street, new
-               {
-                   @class = "textarea",
-                   @style = "width:300px",
-                   placeholder = "dane"
-               })
+                           {
+                               @class = "textarea",
+                               @style = "width:300px",
+                               placeholder = "dane"
+                           })
                     </div>
                     <div class="col-md-2">
                         @Html.Label("Telefon:", new { @style = "float:right" })
                     </div>
                     <div class="col-md-2">
                         @Html.TextBox("phoneNumber", (string)ViewBag.phoneNumber, new
-               {
-                   @class = "textarea",
-                   @style = "width:120px",
-                   placeholder = "dane i prośby"
-               })
+                           {
+                               @class = "textarea",
+                               @style = "width:120px",
+                               placeholder = "dane i prośby"
+                           })
                     </div>
                 </div>
                 <p />
@@ -188,7 +188,26 @@
                         Utworzono
                     </th>
                     <th>
-                        Imię i nazwisko
+                        @Html.ActionLink("Imię i nazwisko", "List",
+                            new
+                            {
+                                creationDateFrom = ViewBag.creationDateFrom,
+                                creationDateTo = ViewBag.creationDateTo,
+                                PreferredHoursFrom = ViewBag.PreferredHoursFrom,
+                                PreferredHoursTo = ViewBag.PreferredHoursTo,
+                                fullName = ViewBag.fullName,
+                                city = ViewBag.city,
+                                street = ViewBag.street,
+                                phoneNumber = ViewBag.phoneNumber,
+                                emailAdress = ViewBag.emailAdress,
+                                showUserData = ViewBag.showUserData,
+                                showContactRequests = ViewBag.showContactRequests,
+                                sortColumn = "FullName",
+                                sortDirection = ViewBag.sortDirection,
+                                page = 1
+                            },
+                            new { style = "text-decoration:none; color:black" }
+                        )
                     </th>
                     @if (hasUserData)
                     {
