Dociągnięcie godzin kontaktu na detale (do uwzględnienia w pracy)

--- a/LanguageSchool/Views/ContactRequest/Details.cshtml
+++ b/LanguageSchool/Views/ContactRequest/Details.cshtml
@@ -67,6 +67,21 @@
             </div>
             <div class="row form-group">
                 <div class="control-label col-md-2">
+                    <strong>Godziny kontaktu od</strong>
+                </div>
+                <div class="col-md-4">
+                    @Html.DisplayFor(model => model.PreferredHoursFrom)
+                </div>
+
+                <div class="control-label col-md-2">
+                    <strong>Godziny kontaktu do</strong>
+                </div>
+                <div class="col-md-4">
+                    @Html.DisplayFor(model => model.PreferredHoursTo)
+                </div>
+            </div>
+            <div class="row form-group">
+                <div class="control-label col-md-2">
                     <strong>Kurs</strong>
                 </div>
                 <div class="col-md-4">
