Poprawki w działaniu listy danych kontaktowych

--- a/LanguageSchool/Views/Shared/_TabSortHeader.cshtml
+++ b/LanguageSchool/Views/Shared/_TabSortHeader.cshtml
@@ -14,6 +14,8 @@
         emailAdress = ViewBag.emailAdress,
         showUserData = ViewBag.showUserData,
         showContactRequests = ViewBag.showContactRequests,
+        courseId = ViewBag.courseId,
+        roleId = ViewBag.roleId,
         sortColumn = Model.ColumnName,
         sortDirection = ViewBag.sortDirection,
         page = 1
