--- a/LanguageSchool/Views/UserData/List.cshtml
+++ b/LanguageSchool/Views/UserData/List.cshtml
@@ -23,8 +23,8 @@
             emailAdress = ViewBag.emailAdress,
             showUserData = ViewBag.showUserData,
             showContactRequests = ViewBag.showContactRequests,
-            sortColumn = ViewBag.sortColumn,
-            sortDirection = ViewBag.sortDirection,
+            sortColumn = "CreationDate",
+            sortDirection = "desc",
             page = 1
         });
 
