Zmiana domyślnych godzin dla listy

--- a/LanguageSchool/Views/UserData/List.cshtml
+++ b/LanguageSchool/Views/UserData/List.cshtml
@@ -297,8 +297,8 @@
         var preferredHoursFrom = document.getElementById("preferredHoursFrom");
         var preferredHoursTo = document.getElementById("preferredHoursTo");
 
-        preferredHoursFrom.value = 8;
-        preferredHoursTo.value = (current.getHours() + 1);
+        preferredHoursFrom.value = current.getHours();
+        preferredHoursTo.value = 20;
 
         //dropdown
 
