--- a/LanguageSchool/Views/Group/Create.cshtml
+++ b/LanguageSchool/Views/Group/Create.cshtml
@@ -33,7 +33,7 @@
                             <strong>Prowadzący</strong>
                         </div>
                         <div class="col-md-8">
-                            @Html.DropDownListFor(model => model.UserId, Model.Users, new { @class = "form-control" })
+                            @Html.DropDownListFor(model => model.TeacherId, Model.Teachers, new { @class = "form-control" })
                         </div>
                     </div>
                 </div>
