Poprawki po testach oraz zmiana w partial

--- a/LanguageSchool/Views/Course/FullDetails.cshtml
+++ b/LanguageSchool/Views/Course/FullDetails.cshtml
@@ -8,7 +8,7 @@
 }
 
 <div class="container">
-    @{ Html.RenderPartial("_PartHeader", "Dane kursu"); }
+    @Html.Partial("_PartHeader", "Dane kursu")
     <div class="row">
         <div class="bordered col-md-12">
             <div class="row form-group">
