--- a/LanguageSchool/Views/Group/FullDetails.cshtml
+++ b/LanguageSchool/Views/Group/FullDetails.cshtml
@@ -63,7 +63,7 @@
             </div>
         </div>
     </div>
-    @{ Html.RenderPartial("_PartHeader", "Godziny zajęć"); }
+    @Html.Partial("_PartHeader", "Godziny zajęć")
     <div class="row">
         <div class="bordered col-md-12">
             <table class="table table-striped table-bordered">
@@ -91,7 +91,7 @@
     </div>
     @if (Model.Students.Any())
     {
-        Html.RenderPartial("_PartHeader", "Zapisani studenci");
+        @Html.Partial("_PartHeader", "Zapisani studenci")
         <div class="row">
             <div class="bordered col-md-12">
                 <table class="table table-striped table-bordered">
