--- a/LanguageSchool/Views/LessonSubject/LessonSubjects.cshtml
+++ b/LanguageSchool/Views/LessonSubject/LessonSubjects.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="container">
-    @{ Html.RenderPartial("_PartHeader", "Prowadzący:" + Model.Teacher.Fullname); }
+    @Html.Partial("_PartHeader", "Prowadzący:" + Model.Teacher.Fullname)
     <div class="row">
         <div class="bordered col-md-12">
             <table class="table table-striped table-bordered">
