--- a/LanguageSchool/Views/Material/Upload.cshtml
+++ b/LanguageSchool/Views/Material/Upload.cshtml
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
 
     <div class="container">
-        @{ Html.RenderPartial("_PartHeader", "Udostępnij nowe materiały dla tematu"); }
+        @Html.Partial("_PartHeader", "Udostępnij nowe materiały dla tematu")
         <div class="row form-horizontal">            
             <div class="bordered col-md-12">
                 <div class="col-md-6">
