--- a/LanguageSchool/Views/Question/Index.cshtml
+++ b/LanguageSchool/Views/Question/Index.cshtml
@@ -8,7 +8,7 @@
 }
 
 <div class="container">
-    @{ Html.RenderPartial("_PartHeader", "Pytania otwarte"); }
+    @Html.Partial("_PartHeader", "Pytania otwarte")
     <div class="row">
         <div class="bordered col-md-12">
             <table class="table table-striped table-bordered">
@@ -60,7 +60,7 @@
             <button class="btn btn-block btn-default" type="button" onclick="location.href='@Url.Action("CreateOpen", "Question", new { lessonSubjectId = Model.LessonSubjectId })'">Utwórz nowe</button>
         </div>
     </div>
-    @{ Html.RenderPartial("_PartHeader", "Pytania zamknięte"); }
+    @Html.Partial("_PartHeader", "Pytania zamknięte")
     <div class="row">
         <div class="bordered col-md-12">
             <table class="table table-striped table-bordered">
