Pełne obsłużenie edycji dla grup

--- a/LanguageSchool/Views/Group/Edit.cshtml
+++ b/LanguageSchool/Views/Group/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model LanguageSchool.Models.ViewModels.GroupViewModels.GroupInputVM
+﻿@model LanguageSchool.Models.ViewModels.GroupViewModel
 
 @{
     ViewBag.Title = "Create";
@@ -60,7 +60,7 @@
         </div>
     </div>
     <div class="row col-md-12">
-        <div class="col-md-2 col-md-offset-10">
+        <div class="col-md-2 col-md-offset-9">
             <input type="submit" value="Zmień godziny zajęć" class="btn btn-block btn-default" />
         </div>
     </div>
