--- a/LanguageSchool/Views/Course/FullDetails.cshtml
+++ b/LanguageSchool/Views/Course/FullDetails.cshtml
@@ -105,7 +105,7 @@
     </div>
     @if (Model.Groups.Any())
     {
-        Html.Partial("_PartHeader", "Grupy przypisane do kursu");
+        @Html.Partial("_PartHeader", "Grupy przypisane do kursu")
         <div class="row">
             <div class="bordered col-md-12">
                 <table class="table table-striped table-bordered">
