--- a/LanguageSchool/Views/Message/Details.cshtml
+++ b/LanguageSchool/Views/Message/Details.cshtml
@@ -40,7 +40,7 @@
                 </dt>
 
                 <dd>
-                    @Html.DisplayFor(model => model.Contents)
+                    @Html.Raw(Model.Contents)
                 </dd>
             </dl>
         </div>
