--- a/LanguageSchool/Views/Message/Index.cshtml
+++ b/LanguageSchool/Views/Message/Index.cshtml
@@ -6,66 +6,70 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container thumbnail">
-    <table class="table table-striped table-bordered">
-        <tr>
-            <th>
-                @Html.ActionLink("Data wysłania", "Index", new { sortColumn = "SentDate", sortDirection = ViewBag.sortDirection, page = 1 },
+<div class="container">
+    <div class="row">
+        <div class="bordered col-md-12">
+            <table class="table table-striped table-bordered">
+                <tr>
+                    <th>
+                        @Html.ActionLink("Data wysłania", "Index", new { sortColumn = "SentDate", sortDirection = ViewBag.sortDirection, page = 1 },
                          new { style = "text-decoration:none; color:black" })
-            </th>
-            <th>
-                @Html.ActionLink("Data odczytania", "Index", new { sortColumn = "ReceivedDate", sortDirection = ViewBag.sortDirection, page = 1 },
+                    </th>
+                    <th>
+                        @Html.ActionLink("Data odczytania", "Index", new { sortColumn = "ReceivedDate", sortDirection = ViewBag.sortDirection, page = 1 },
                          new { style = "text-decoration:none; color:black" })
-            </th>
-            <th>
-                @Html.ActionLink("Tytuł", "Index", new { sortColumn = "Topic", sortDirection = ViewBag.sortDirection, page = 1 },
+                    </th>
+                    <th>
+                        @Html.ActionLink("Tytuł", "Index", new { sortColumn = "Topic", sortDirection = ViewBag.sortDirection, page = 1 },
                          new { style = "text-decoration:none; color:black" })
-            </th>
-            <th>
-                Treść
-            </th>
-        </tr>
+                    </th>
+                    <th>
+                        Treść
+                    </th>
+                </tr>
 
-        @foreach (var item in Model)
-        {
-            var style = "";
+                @foreach (var item in Model)
+                {
+                    var style = "";
 
-            if (item.IsSystem)
-            {
-                style += "color:Red;";
-            }
+                    if (item.IsSystem)
+                    {
+                        style += "color:Red;";
+                    }
 
-            if (!item.HasBeenReceived)
-            {
-                style += "font-weight:bold";
-            }
+                    if (!item.HasBeenReceived)
+                    {
+                        style += "font-weight:bold";
+                    }
 
-            <tr style="@style">
-                <td>
-                    @Html.DisplayFor(modelItem => item.SentDate)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ReceivedDate)
-                </td>
-                <td>
-                    @Html.ActionLink(item.Topic, "Details", new { userMessageId = item.UserMessageId })
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ShortenedContents)
-                </td>
-            </tr>
-        }
+                    <tr style="@style">
+                        <td>
+                            @Html.DisplayFor(modelItem => item.SentDate)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ReceivedDate)
+                        </td>
+                        <td>
+                            @Html.ActionLink(item.Topic, "Details", new { userMessageId = item.UserMessageId })
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ShortenedContents)
+                        </td>
+                    </tr>
+                }
 
-    </table>
-</div>
+            </table>
+        </div>
 
-<p />
+        <p />
 
-<div class="col-md-5">
-</div>
-<div class="col-md-3">
-    @Html.PagedListPager(Model, page => Url.Action("Index",
+        <div class="col-md-5">
+        </div>
+        <div class="col-md-3">
+            @Html.PagedListPager(Model, page => Url.Action("Index",
             new { sortColumn = ViewBag.sortColumn, sortDirection = ViewBag.sortDirection, page }))
-</div>
-<div class="col-md-4">
+        </div>
+        <div class="col-md-4">
+        </div>
+    </div>
 </div>
