Obsługa błędów dla efexception, zabezpieczenie przed ponownym pobieraniem na widokach (przejrzyj je jeszcze raz i upewnij się że masz wszystko na selectlist)

--- a/LanguageSchool/Views/UserData/Create.cshtml
+++ b/LanguageSchool/Views/UserData/Create.cshtml
@@ -8,6 +8,7 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
+    @Html.HiddenFor(model => model.CourseId)
     @Html.HiddenFor(model => model.OriginContactRequestId)
 
     <div class="container">
